--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "firebase": "^7.18.0",
-    "latlon-geohash": "^2.0.0"
+    "latlon-geohash": "^2.0.0",
+    "react-bootstrap": "^1.3.0",
+    "bootstrap": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
