--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,8 +13,7 @@
     "react-scripts": "3.4.3",
     "firebase": "^7.18.0",
     "latlon-geohash": "^2.0.0",
-    "react-bootstrap": "^1.3.0",
-    "bootstrap": "^4.5.2"
+    "@react-google-maps/api": "^1.9.12"
   },
   "scripts": {
     "start": "react-scripts start",
