--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^1.9.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "firebase": "^7.18.0",
+    "latlon-geohash": "^2.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "firebase": "^7.18.0",
-    "latlon-geohash": "^2.0.0",
-    "@react-google-maps/api": "^1.9.12"
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
