--- a/webapp/.gitignore
+++ b/webapp/.gitignore
@@ -159,3 +159,14 @@ yarn-error.log*
 
 # Don't show api keys
 .env
+
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
+
+# End of https://www.toptal.com/developers/gitignore/api/firebase
